--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: wrapper
 ---
 
-{% include hero.html%}
+{% include hero.html %}
 
 
 
@@ -15,6 +15,6 @@ layout: wrapper
     <i class="fa-solid fa-angles-down"></i>
     </a> 
 </div>
-{% include projects.html%}
-{% include skills.html%
-{% include contact.html%}
+{% include projects.html %}
+{% include skills.html %}
+{% include contact.html %}
